public/css/styles.css
button {
  margin-top: 25px;
}

footer {
  margin-top: 25px;
}

form {
  margin-left: 20px;
}

form h4 {
  margin-top: 10px;
}

h1 {
  text-align: center;
}

h4 {
  margin-bottom: 5px;
}

label {
  margin-top: 7px;
  display: inline-block;
}

nav {
  margin-bottom: 20px;
}

.contributeButton {
  text-align: center;
}

.aTable {
  width: 80%;
  margin: 20px auto;
}

table caption {
  font-size: 2rem;
}

